--- a/tegami-flow-gui/src/i18n/resources/ja.json
+++ b/tegami-flow-gui/src/i18n/resources/ja.json
@@ -34,6 +34,7 @@
     "next": "次へ",
     "itemsPerPage": "1ページあたりの項目数:"
   },
+  "serviceName": "手紙フロー",
   "landing": {
     "header": {
       "login": "ログイン"
@@ -84,7 +85,7 @@
     },
     "cta": {
       "title": "採用コミュニケーションを変革する準備はできていますか？",
-      "description": "HireFlowは、チームが候補者とより効果的にコミュニケーションを取り、時間を節約し、採用体験を向上させるのに役立ちます。",
+      "description": "TegamiFlowは、チームが候補者とより効果的にコミュニケーションを取り、時間を節約し、採用体験を向上させるのに役立ちます。",
       "button": "アプリを起動"
     },
     "footer": {
