Update variable label for signature in templates and add translation for signature in English and Japanese

--- a/tegami-flow-gui/src/i18n/resources/en.json
+++ b/tegami-flow-gui/src/i18n/resources/en.json
@@ -203,7 +203,8 @@
       "position": "Position",
       "company": "Company",
       "date": "Date",
-      "time": "Time"
+      "time": "Time",
+      "signature": "Signature"
     },
     "actions": {
       "edit": "Edit template",
