--- a/tegami-flow-gui/src/i18n/resources/ja.json
+++ b/tegami-flow-gui/src/i18n/resources/ja.json
@@ -203,7 +203,8 @@
       "position": "ポジション",
       "company": "会社",
       "date": "日付",
-      "time": "時間"
+      "time": "時間",
+      "signature": "署名"
     },
     "actions": {
       "edit": "テンプレートを編集",
